--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
     </div>
 
     <div class="accueil">
-        <h1>Salut les MAN et WOMAN</h1>
+        <h1>Salut les MAN et les  WO-MAN</h1>
+
+	    <br>
+	    
+
+	    <h1>Salut les MAN et les  WO-MAN</h1>
+	    <a href="outils informatique.pdf">outils informatique.pdf</a>
     </div>
 
 
