--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 	    <br>
 	    
 
-	    <h1>Salut les MAN et les  WO-MAN</h1>
-	    <a href="outils informatique.pdf">outils informatique.pdf</a>
+	    <h1>Salut les MAN et les  WO-MAN <a href="outils informatique.pdf">outils informatique.pdf</a></h1>
+	    
     </div>
 
 
