--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>Salut les MAN et les  WO-MAN</h1>
 
 	    <br>
-	    <h1>Exemple PDF avec iframe</h1>
+	    <h1>ouvrir le pdf</h1>
     <iframe src="outils informatique.pdf" width="100%" height="500px"> </iframe>
 	    
 
