--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
         <h1>Salut les MAN et les  WO-MAN</h1>
 
 	    <br>
-	     <h1>Exemple PDF</h1>
-    <p>Ouvrir un fichier PDF
-      <a href="outils informatique.pdf">exemple</a>.
-    </p>
+	     <embed src="outils informatique.pdf" type="application/pdf" width="100%" height="100%" />
+
 	    
 
 	
