--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 	<br>
 	<div class="accueil">
-		<object data="outils informatique.pdf" height="100%" width="100%"></object>
+		<a href="https://drive.google.com/file/d/18nr1p-J1dA99NpcB-Yji0kRYHLQZw_aJ/view?usp=drive_link">cours pdf</a>
 
 		 </div>
 
