--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 	<br>
 	<div class="accueil">
-		<a href="https://drive.google.com/file/d/18nr1p-J1dA99NpcB-Yji0kRYHLQZw_aJ/view?usp=drive_link">cours pdf</a>
+		<a href="outils informatique.pdf">cours pdf</a>
 
 		 </div>
 
